# finauto

./: pyproject.toml
finauto/: server.py  sheets.py
